fixed end node creation and serachbar

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                            <div class="form-group">
                                <label>Options:</label>
                                <div class="options-container" id="options-container">
-                                   <div class="option-item">
-                                       <input type="text" placeholder="Option label (e.g., Yes)" required>
-                                       <input type="text" placeholder="Next node ID (e.g., verify-id)" required>
-                                       <button type="button" class="remove-option" onclick="removeOption(this)">×</button>
-                                   </div>
-                               </div>
+                                <div class="option-item">
+                                    <input type="text" placeholder="Option label (e.g., Yes)">
+                                    <input type="text" placeholder="Next node ID (e.g., verify-id)">
+                                    <button type="button" class="remove-option" onclick="removeOption(this)">×</button>
+                                </div>
+                            </div>
                                <button type="button" class="btn btn-secondary" onclick="addOption()">+ Add Option</button>
                            </div>
                            
