--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <button class="mobile-menu-btn" onclick="openMobileMenu()">☰</button>
 </div>
 
-<!-- Mobile Overlay -->
-<div class="mobile-overlay" onclick="closeMobileMenu()"></div>
+<!--MOBILE OVERLAY AND MENU HTML -->
 
-<!-- Mobile Side Menu -->
+<div class="mobile-overlay" onclick="handleMobileOverlayClick(event)"></div>
+
+
+<!-- Mobile Side Menu - Opens from LEFT -->
+<!-- Mobile Side Menu - Opens from LEFT -->
 <div class="mobile-side-menu">
     <div class="mobile-menu-header">
-        <h2 style="margin: 0; font-size: 1.3rem;">📝 Add New Node</h2>
+        <h2 style="margin: 0; font-size: 1.3rem;" id="mobile-menu-title">📝 Add New Node</h2>
         <button class="mobile-menu-close" onclick="closeMobileMenu()">✕</button>
     </div>
     <div class="mobile-menu-content">
@@ -59,6 +62,7 @@
         </div>
     </div>
 </div>
+
     <div class="mobile-fab" onclick="openMobileMenu()" title="Add New Node"></div>
 <!-- Mobile Node Toolbar (shows when node is selected) -->
 <div class="mobile-node-toolbar">
