changed around a bunch of things trying to get the load example to work, it still does not, plus changed the way the lines connect to the nodes.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             
             <div class="example-dropdown">
-    <button class="example-dropdown-btn" onclick="toggleMobileExampleDropdown()">
+    <button class="example-dropdown-btn">
         🎮 Load Example
         <span id="mobile-dropdown-arrow">▼</span>
     </button>
@@ -194,12 +194,12 @@
                                <label for="import-file" class="file-input-label">📁 Import JSON</label>
                            </div>
                            <div class="example-dropdown">
-                               <button class="example-dropdown-btn" onclick="toggleExampleDropdown()">
+                               <button class="example-dropdown-btn">
                                    🎮 Load Example
                                    <span id="dropdown-arrow">▼</span>
                                </button>
                                <div class="example-dropdown-content" id="example-dropdown">
-                                   <div class="example-option" onclick="loadExample('should-i-eat-it')">
+                                   <div class="example-option">
                                        🍱 Should I Eat It?
                                    </div>
                                </div>
